fixed extra space in the left side of the menu
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@88038 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/css/webfonts.css
+++ b/css/webfonts.css
@@ -11,6 +11,11 @@ div#webfonts-fonts{
 }
 
 
+div#webfonts-menu .menu ul{
+	padding:5px!important;
+}
+
+
 div#webfonts-fonts li{
 	margin: 0;
 	padding:5px;
